metadata downloader for comics.org